test/data/syntax-errors/list-missing-comma.jen
list := [1,  2 2333 4]
